marketing-service/marketing-service/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: marketing
  labels:
    app.kubernetes.io/managed-by: github-actions
    environment: production
