marketing-service/marketing-service/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marketing-frontend-svc
  namespace: marketing
  labels:
    app: marketing-frontend
spec:
  selector:
    app: marketing-frontend
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8501
      targetPort: 8501
